# learn-computer-science

./: 2018.md  PLAN.md  README.md
algorythom-data-structure/: MEMO.md
algorythom-data-structure-training/: README.md  jest.config.js  package-lock.json  package.json
algorythom-data-structure-training/src/: utils.ts
algorythom-data-structure-training/src/data-structure/: queue.ts  stack.ts
algorythom-data-structure-training/src/elementary-data-structure/: linked-list.ts
algorythom-data-structure-training/src/elementary-quetions/: area-on-the-cross-section-diagram.ts  reversed-polish-notation.ts
algorythom-data-structure-training/src/elementary-search/: linear-search.ts
algorythom-data-structure-training/src/elementary-sort/: bubble-sort.ts  insertion-sort.ts  selection-sort.ts  shell-sort.ts
algorythom-data-structure/ITP1/: 4_C.cpp
algorythom-data-structure/ITP1_1_D/: main.cpp
algorythom-data-structure/ITP1_2_B/: main.cpp
algorythom-data-structure/ITP1_2_C/: main.cpp
algorythom-data-structure/ITP1_2_D/: main.cpp
algorythom-data-structure/ITP1_3_A/: main.cpp
algorythom-data-structure/ITP1_3_B/: main.cpp
algorythom-data-structure/ITP1_3_C/: main.cpp
algorythom-data-structure/ITP1_3_D/: main.cpp
algorythom-data-structure/ITP1_4_A/: main.cpp
algorythom-data-structure/learning/: package-lock.json
books/: README.md
books/Pythonと実データで遊んで学ぶデータ分析講座/: p137-section011-tweet.ipynb  p154-section012-tweet.ipynb  p160-section013-iris.ipynb  p175-section014-iris.ipynb  p191-section015-iris.ipynb  p195-section015-pfm.ipynb  p230-section018-mnist.ipynb  p235-section018-temples-and-shrines.ipynb
books/applied-information-technology-engineer/: 10_management.md  11_strategy_1.md  3_hardware.md  5_system_configuration_technology.md
books/guide-to-the-computer-for-programmers/: MEMO.md
books/how-linux-works/: .gitignore  MEMO.md
books/how-linux-works/samples/: fork-and-exec.c  fork.c  hello.c  loop.c  ppidloop.c  sched.c
books/lesson-of-data-analysis-with-python-and-real-data/: .gitignore  MEMO.md  get_image.py  p111-section010-boston.ipynb  p115-section010-tokyo.ipynb  p129-section011-iris.ipynb  p152-section012-iris.ipynb  p162-section013-tweet.ipynb  p178-section014-pfm.ipynb  p205-section016.ipynb  p215-section017.ipynb  p60-section009-boston.ipynb  p79-section009-tokyo.ipynb
books/lesson-of-data-analysis-with-python-and-real-data/modules/: mecab-ipadic-neologd.sh
books/nand2tetoris/: MEMO.md
books/nand2tetris/: .gitignore  MEMO.md
books/programming-robots-with-ROS/: MEMO.md
books/the-1st-book-for-FP-level2/: MEMO.md
books/the-1st-book-for-FP-level3/: MEMO.md
books/コマンドで理解するTCP:IP/: README.md
books/プログラミングコンテスト攻略のためのアルゴリズムとデータ構造/ITP1/: 1_B.cpp  1_C.cpp  2_A.cpp  4_B.cpp
books/応用情報技術者/: 12_strategy_2.md  1_computer_science.md  2_datastructure_and_algorithm.md  4_software.md  8_security.md
competitive-programming/: NOTE.md  README.md  main.py  snippets.js
competitive-programming/snippets/: index.js
control-engineering/: MEMO.md
data-structure-and-algorithm/: README.md  learn-data-structure-and-algorithm-with-leetcode.md
data-structure-and-algorithm/docs/: algorithm.md  data-structure.md  implementation-and-paradigm.md  problems.md
data-structure-and-algorithm/tools/leetcode-analytics/: package-lock.json  package.json  result.json
english/: README.md
fundamental/: 0_computer_science.md  10_management.md  11_strategy_1.md  12_strategy_2.md  1_datastructure_and_algorithm.md  2_hardware.md  3_software.md  4_system_configuration_technology.md  6_database.md  7_network.md  8_security.md  9_system_development.md
go-monkey/src/monkey/: main.go
how-to-use-clang/: README.md  hello.c
job-transfer/: RESUME.md
ksnctf/problem-2/: index.js
ksnctf/problem-3/: index.js
language-processor/: README.md  lang.c  runtest.sh
learn-new-langs/hello-world/: hello-world
learn-new-langs/playground/: Main.cpp
learn-new-langs/unittest/: index.js  main.py
management/: README.md
network/: README.md
practices/ROS/: Dockerfile  Dockerfile.firefox  README.md
practices/algorythom-and-data-structure/: package-lock.json  package.json
practices/calculators/: README.md
practices/calculators/go/: go.mod  lexer.go  lexer_test.go  (+3 more)
practices/json-parser/: Cargo.toml
practices/language-processor/: lang.c  runtest.sh
practices/slam/: Dockerfile  Dockerfile.eyes  README.md
practices/slam/catkin_ws/src/my_first/: package.xml
programming-contest/: LEETCODE.md  NOTE.md  README.md
programming-contest/playground/: main.cpp
programming-contest/templates/: index.js  main.cpp  main.py
(+70 files in other folders)
