<?xml version="1.0"?>
<package format="2">
  <name>my_first</name>
  <version>0.0.0</version>
  <description>The my_first package</description>
  <maintainer email="baranche@example.com">baranche</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
<!-- <?xml version="1.0"?> -->
<!-- <package format="2"> -->
<!--   <name>my_first</name> -->
<!--   <version>0.0.0</version> -->
<!--   <description>The my_first package</description> -->
<!--  -->
<!--   <!&#45;&#45; One maintainer tag required, multiple allowed, one person per tag &#45;&#45;> -->
<!--   <!&#45;&#45; Example:  &#45;&#45;> -->
<!--   <!&#45;&#45; <maintainer email="jane.doe@example.com">Jane Doe</maintainer> &#45;&#45;> -->
<!--   <maintainer email="root@todo.todo">root</maintainer> -->
<!--  -->
<!--  -->
<!--   <!&#45;&#45; One license tag required, multiple allowed, one license per tag &#45;&#45;> -->
<!--   <!&#45;&#45; Commonly used license strings: &#45;&#45;> -->
<!--   <!&#45;&#45;   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 &#45;&#45;> -->
<!--   <license>TODO</license> -->
<!--  -->
<!--  -->
<!--   <!&#45;&#45; Url tags are optional, but multiple are allowed, one per tag &#45;&#45;> -->
<!--   <!&#45;&#45; Optional attribute type can be: website, bugtracker, or repository &#45;&#45;> -->
<!--   <!&#45;&#45; Example: &#45;&#45;> -->
<!--   <!&#45;&#45; <url type="website">http://wiki.ros.org/my_first</url> &#45;&#45;> -->
<!--  -->
<!--  -->
<!--   <!&#45;&#45; Author tags are optional, multiple are allowed, one per tag &#45;&#45;> -->
<!--   <!&#45;&#45; Authors do not have to be maintainers, but could be &#45;&#45;> -->
<!--   <!&#45;&#45; Example: &#45;&#45;> -->
<!--   <!&#45;&#45; <author email="jane.doe@example.com">Jane Doe</author> &#45;&#45;> -->
<!--  -->
<!--  -->
<!--   <!&#45;&#45; The *depend tags are used to specify dependencies &#45;&#45;> -->
<!--   <!&#45;&#45; Dependencies can be catkin packages or system dependencies &#45;&#45;> -->
<!--   <!&#45;&#45; Examples: &#45;&#45;> -->
<!--   <!&#45;&#45; Use depend as a shortcut for packages that are both build and exec dependencies &#45;&#45;> -->
<!--   <!&#45;&#45;   <depend>roscpp</depend> &#45;&#45;> -->
<!--   <!&#45;&#45;   Note that this is equivalent to the following: &#45;&#45;> -->
<!--   <!&#45;&#45;   <build_depend>roscpp</build_depend> &#45;&#45;> -->
<!--   <!&#45;&#45;   <exec_depend>roscpp</exec_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use build_depend for packages you need at compile time: &#45;&#45;> -->
<!--   <!&#45;&#45;   <build_depend>message_generation</build_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use build_export_depend for packages you need in order to build against this package: &#45;&#45;> -->
<!--   <!&#45;&#45;   <build_export_depend>message_generation</build_export_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use buildtool_depend for build tool packages: &#45;&#45;> -->
<!--   <!&#45;&#45;   <buildtool_depend>catkin</buildtool_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use exec_depend for packages you need at runtime: &#45;&#45;> -->
<!--   <!&#45;&#45;   <exec_depend>message_runtime</exec_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use test_depend for packages you need only for testing: &#45;&#45;> -->
<!--   <!&#45;&#45;   <test_depend>gtest</test_depend> &#45;&#45;> -->
<!--   <!&#45;&#45; Use doc_depend for packages you need only for building documentation: &#45;&#45;> -->
<!--   <!&#45;&#45;   <doc_depend>doxygen</doc_depend> &#45;&#45;> -->
<!--   <buildtool_depend>catkin</buildtool_depend> -->
<!--   <build_depend>rospy</build_depend> -->
<!--   <build_depend>std_msgs</build_depend> -->
<!--   <build_export_depend>rospy</build_export_depend> -->
<!--   <build_export_depend>std_msgs</build_export_depend> -->
<!--   <exec_depend>rospy</exec_depend> -->
<!--   <exec_depend>std_msgs</exec_depend> -->
<!--  -->
<!--  -->
<!--   <!&#45;&#45; The export tag contains other, unspecified, tags &#45;&#45;> -->
<!--   <export> -->
<!--     <!&#45;&#45; Other tools can request additional information be placed here &#45;&#45;> -->
<!--  -->
<!--   </export> -->
<!-- </package> -->
